# C

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
0.1/: 10.c  11.c  12.c  13.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
0.2/: Odd-Even.c  abs-value.c  add-sub-multiply-divide.c  add-two-numbers.c  age-checker.c  area-of-the-circle.c  ascii-char.c  average-3-numbers.c  biggest-3-num.c  celsius-fahrenheit.c  check-greatest-equal.c  days-week.c  distance-formula.c  first-last-digits.c  float-for.c  grade-mark.c  greater-bw-three-numbers.c  greater-bw-two-numbers.c  interchanging-numbers.c  inverted-pyramid.c  kilometres-miles.c  leap-year.c  mark-grade.c  max-three-num-conditional.c  max-value.c  nested-loop.c  odd-even-if.c  pallindrome-checker.c  pattern-2.c  pattern-printing.c  prime-number.c  random-game-checker.c  reverse-number.c  reverse-two-digit.c  rock-paper-scissor-game.c  simple-interest.c  sum-product-subtract.c  swap-XOR.c  switch-calculator.c  switch-char-classifier.c  (+3 more)
0.3/: array-1.c  array-2.c  array-3.c  array-program-3D.c  array-program.c
0.4/: function-calling-2.c  function-calling.c
0.5/: 10.encode-agerollno-decode.c  13.max-three-logics.c  14.odd-or-even.c  16.vowel-or-not.c  18.all-bitwise-menu.c  20.difference-while-loop.c  25.reverse-number.c  27.1-n-1.c  31.1-22+33-44.c  34.rand-20-30.c  36.pattern-4-1.c  45.array-search-element.c  50.matrix-sum-rowcol.c  52.uplow-triangluar-matrix.c  56.vowels-in-string.c  57.reverse-a-string.c  60.append-two-strings.c  (+9 more)
(+111 files in other folders)
