AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = program1 program2 program3 program4 program5 program6 program7 program8 program9 program10 program11

program1_SOURCES = 0.1/1.c
program2_SOURCES = 0.1/2.c
program3_SOURCES = 0.1/3.c
program4_SOURCES = 0.1/4.c
program5_SOURCES = 0.1/5.c
program6_SOURCES = 0.1/6.c
program7_SOURCES = 0.1/7.c
program8_SOURCES = 0.1/8.c
program9_SOURCES = 0.1/9.c
program10_SOURCES = 0.1/10.c
program11_SOURCES = 0.1/11.c